Migrate capture backend to Pcap4J